# code

ARM/Car/: CMakeLists.txt
ARM/Car/include/: UP_ADC.c  UP_Beer.c  UP_Beer.h  UP_CDS5500.c  UP_CDS5500.h  UP_Globle.h  UP_IOout.h  UP_MP3.c  UP_System.c  UP_System.h  UP_Timer.c  UP_Timer.h  UP_Woody_ColorAndCode.c  UP_Woody_ColorAndCode.h  UP_Woody_ImageRecognition.c  UP_Woody_ImageRecognition.h  UP_Woody_SpeechRecognition.c  UP_Woody_SpeechRecognition.h  UP_Woody_VoicePlaying.c  UP_Woody_VoicePlaying.h
ARM/Car/src/: main.c
ARM/test/: CMakeLists.txt  main.c
C/: 2342.c  ceshi.c  lingxin.c
C++/bilibili/: P09.cpp  P100.cpp  P101.cpp  P102.cpp  P103.cpp  P104.cpp  P105.cpp  P107.cpp  P108.cpp  P110.cpp  P111.cpp  P113.cpp  P118.cpp  P121.cpp  P122.cpp  P123.cpp  P15.cpp  P170.cpp  P182.cpp  P89.cpp  P91.cpp  P92.cpp  P95.cpp  P97.cpp  P99.cpp
C++/homework/: 1  1.cpp  10.cpp  11.cpp  12.cpp  13.cpp  2.cpp  3.cpp  (+16 more)
MATLAB/: Project1.m
VScodeSDL/: 2.cpp  3.cpp  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  MyGame1.sln  MyGame1.vcxproj  MyGame1.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  class.cpp  class.h  cmake_install.cmake  main.cpp  wav.cpp
Web/: 1.html  2.html  3.html  acg.html  bilibili.html  homework.html  my.css
c_primer_plus/: 2342.c  ceshi.c  jiami.c
homework/: homework1.c  homework11.c  homework2.c  homework4.c  homework5.c  homework6.c  homework9.c
lastwork.c/: FristSoftware.c  Gender.txt  Math.txt  Name.txt  Student_ID.txt
tips/: juzhishuo1.c  shuzu.c  sizeof.c  suhshu2.c  sushu.c  zifushuzu.c
(+445 files in other folders)
